bug fixes input